escape_room_dsl/.antlr/EscapeRoomDSLParser.java
// Generated from /Users/louis/Documents/repos/Lispy-Dungeon/escape_room_dsl/EscapeRoomDSL.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class EscapeRoomDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, IF=78, ELSE=79, WHEN=80, REPEAT=81, 
		FROM=82, TO=83, AND=84, OR=85, SHOW_MESSAGE=86, UNLOCK=87, LOCK=88, VICTORY=89, 
		GAME_OVER=90, SPAWN=91, SPAWN_MONSTER=92, GIVE_ITEM=93, PRINT=94, PLAY_SOUND=95, 
		QUIZ_TYPE=96, DIFFICULTY=97, ITEM_TYPE=98, PLAYER_CLASS=99, BOOLEAN=100, 
		PLUS=101, MINUS=102, STAR=103, SLASH=104, PERCENT=105, EQ=106, NEQ=107, 
		LT=108, GT=109, LTE=110, GTE=111, AND_OP=112, OR_OP=113, NOT=114, ASSIGN=115, 
		PLUS_ASSIGN=116, MINUS_ASSIGN=117, STAR_ASSIGN=118, SLASH_ASSIGN=119, 
		LPAREN=120, RPAREN=121, LBRACE=122, RBRACE=123, LBRACKET=124, RBRACKET=125, 
		COLON=126, COMMA=127, DOT=128, ID=129, STRING=130, MULTILINE_STRING=131, 
		FLOAT=132, INT=133, WS=134, COMMENT=135;
	public static final int
		RULE_start = 0, RULE_escape_room = 1, RULE_variables_block = 2, RULE_variable_def = 3, 
		RULE_expression = 4, RULE_primary_expression = 5, RULE_triggers_block = 6, 
		RULE_trigger_def = 7, RULE_statement_block = 8, RULE_statement = 9, RULE_assignment_statement = 10, 
		RULE_property_access = 11, RULE_function_call_statement = 12, RULE_if_statement = 13, 
		RULE_repeat_statement = 14, RULE_event_handler = 15, RULE_metadata = 16, 
		RULE_metadata_property = 17, RULE_title_property = 18, RULE_description_property = 19, 
		RULE_difficulty_property = 20, RULE_max_time_property = 21, RULE_fog_of_war_property = 22, 
		RULE_view_distance_property = 23, RULE_camera_zoom_property = 24, RULE_rooms = 25, 
		RULE_room = 26, RULE_room_property = 27, RULE_room_description_property = 28, 
		RULE_room_x_property = 29, RULE_room_y_property = 30, RULE_room_width_property = 31, 
		RULE_room_height_property = 32, RULE_room_pattern_property = 33, RULE_room_items_property = 34, 
		RULE_room_npcs_property = 35, RULE_room_connections_property = 36, RULE_room_locked_by_property = 37, 
		RULE_items = 38, RULE_item = 39, RULE_item_property = 40, RULE_item_description_property = 41, 
		RULE_item_type_property = 42, RULE_item_texture_property = 43, RULE_item_properties_property = 44, 
		RULE_item_location_property = 45, RULE_item_visible_property = 46, RULE_item_readable_property = 47, 
		RULE_item_content_property = 48, RULE_npcs = 49, RULE_npc = 50, RULE_npc_property = 51, 
		RULE_npc_description_property = 52, RULE_npc_texture_property = 53, RULE_npc_location_property = 54, 
		RULE_npc_dialogue_property = 55, RULE_npc_gives_items_property = 56, RULE_npc_requires_items_property = 57, 
		RULE_npc_start_x_property = 58, RULE_npc_start_y_property = 59, RULE_npc_hostile_property = 60, 
		RULE_npc_health_property = 61, RULE_npc_damage_property = 62, RULE_dialogue = 63, 
		RULE_dialogue_property = 64, RULE_dialogue_conditions = 65, RULE_dialogue_condition = 66, 
		RULE_player = 67, RULE_player_property = 68, RULE_player_class_property = 69, 
		RULE_player_start_x_property = 70, RULE_player_start_y_property = 71, 
		RULE_player_health_property = 72, RULE_player_mana_property = 73, RULE_player_stamina_property = 74, 
		RULE_player_speed_property = 75, RULE_player_mana_restore_property = 76, 
		RULE_player_stamina_restore_property = 77, RULE_quizzes = 78, RULE_quiz = 79, 
		RULE_quiz_property = 80, RULE_quiz_type_property = 81, RULE_quiz_question_property = 82, 
		RULE_quiz_answers_property = 83, RULE_quiz_correct_answers_property = 84, 
		RULE_quiz_explanation_property = 85, RULE_quiz_reward_property = 86, RULE_quiz_attached_to_property = 87, 
		RULE_logic = 88, RULE_logic_expr = 89, RULE_logic_term = 90, RULE_dependencies = 91, 
		RULE_dependency = 92, RULE_events = 93, RULE_event = 94, RULE_event_trigger = 95, 
		RULE_action = 96, RULE_action_type = 97, RULE_object = 98, RULE_pair = 99, 
		RULE_array = 100, RULE_value = 101, RULE_multiline_string = 102;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "escape_room", "variables_block", "variable_def", "expression", 
			"primary_expression", "triggers_block", "trigger_def", "statement_block", 
			"statement", "assignment_statement", "property_access", "function_call_statement", 
			"if_statement", "repeat_statement", "event_handler", "metadata", "metadata_property", 
			"title_property", "description_property", "difficulty_property", "max_time_property", 
			"fog_of_war_property", "view_distance_property", "camera_zoom_property", 
			"rooms", "room", "room_property", "room_description_property", "room_x_property", 
			"room_y_property", "room_width_property", "room_height_property", "room_pattern_property", 
			"room_items_property", "room_npcs_property", "room_connections_property", 
			"room_locked_by_property", "items", "item", "item_property", "item_description_property", 
			"item_type_property", "item_texture_property", "item_properties_property", 
			"item_location_property", "item_visible_property", "item_readable_property", 
			"item_content_property", "npcs", "npc", "npc_property", "npc_description_property", 
			"npc_texture_property", "npc_location_property", "npc_dialogue_property", 
			"npc_gives_items_property", "npc_requires_items_property", "npc_start_x_property", 
			"npc_start_y_property", "npc_hostile_property", "npc_health_property", 
			"npc_damage_property", "dialogue", "dialogue_property", "dialogue_conditions", 
			"dialogue_condition", "player", "player_property", "player_class_property", 
			"player_start_x_property", "player_start_y_property", "player_health_property", 
			"player_mana_property", "player_stamina_property", "player_speed_property", 
			"player_mana_restore_property", "player_stamina_restore_property", "quizzes", 
			"quiz", "quiz_property", "quiz_type_property", "quiz_question_property", 
			"quiz_answers_property", "quiz_correct_answers_property", "quiz_explanation_property", 
			"quiz_reward_property", "quiz_attached_to_property", "logic", "logic_expr", 
			"logic_term", "dependencies", "dependency", "events", "event", "event_trigger", 
			"action", "action_type", "object", "pair", "array", "value", "multiline_string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'escape_room:'", "'variables:'", "'triggers:'", "'on_enter'", 
			"'on_exit'", "'on_first_enter'", "'on_clear'", "'on_pickup'", "'on_use'", 
			"'on_drop'", "'on_interact'", "'on_death'", "'on_correct'", "'on_wrong'", 
			"'metadata:'", "'title:'", "'description:'", "'difficulty:'", "'max_time:'", 
			"'fog_of_war:'", "'view_distance:'", "'camera_zoom:'", "'rooms:'", "'x:'", 
			"'y:'", "'width:'", "'height:'", "'pattern:'", "'items:'", "'npcs:'", 
			"'connections:'", "'locked_by:'", "'type:'", "'texture:'", "'properties:'", 
			"'location:'", "'visible:'", "'readable:'", "'content:'", "'dialogue:'", 
			"'gives_items:'", "'requires_items:'", "'start_x:'", "'start_y:'", "'hostile:'", 
			"'health:'", "'damage:'", "'default_text:'", "'default:'", "'conditions:'", 
			"'player:'", "'class:'", "'mana:'", "'stamina:'", "'speed:'", "'mana_restore:'", 
			"'stamina_restore:'", "'quizzes:'", "'question:'", "'answers:'", "'correct_answers:'", 
			"'explanation:'", "'reward:'", "'attached_to:'", "'logic:'", "'win_condition:'", 
			"'dependencies:'", "'state_variables:'", "'timers:'", "'events:'", "'actions:'", 
			"'on_puzzle_solved'", "'on_item_collected'", "'on_time_warning'", "'unlock_door'", 
			"'trigger_puzzle'", "'update_state'", "'if'", "'else'", "'when'", "'repeat'", 
			"'from'", "'to'", "'AND'", "'OR'", "'show_message'", "'unlock'", "'lock'", 
			"'victory'", "'game_over'", "'spawn'", "'spawn_monster'", "'give_item'", 
			"'print'", "'play_sound'", null, null, null, null, null, "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", 
			"'||'", "'!'", "'='", "'+='", "'-='", "'*='", "'/='", "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "':'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "IF", "ELSE", "WHEN", "REPEAT", "FROM", 
			"TO", "AND", "OR", "SHOW_MESSAGE", "UNLOCK", "LOCK", "VICTORY", "GAME_OVER", 
			"SPAWN", "SPAWN_MONSTER", "GIVE_ITEM", "PRINT", "PLAY_SOUND", "QUIZ_TYPE", 
			"DIFFICULTY", "ITEM_TYPE", "PLAYER_CLASS", "BOOLEAN", "PLUS", "MINUS", 
			"STAR", "SLASH", "PERCENT", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "AND_OP", 
			"OR_OP", "NOT", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "STAR_ASSIGN", 
			"SLASH_ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
			"COLON", "COMMA", "DOT", "ID", "STRING", "MULTILINE_STRING", "FLOAT", 
			"INT", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EscapeRoomDSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EscapeRoomDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public Escape_roomContext escape_room() {
			return getRuleContext(Escape_roomContext.class,0);
		}
		public TerminalNode EOF() { return getToken(EscapeRoomDSLParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			escape_room();
			setState(207);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Escape_roomContext extends ParserRuleContext {
		public MetadataContext metadata() {
			return getRuleContext(MetadataContext.class,0);
		}
		public Variables_blockContext variables_block() {
			return getRuleContext(Variables_blockContext.class,0);
		}
		public RoomsContext rooms() {
			return getRuleContext(RoomsContext.class,0);
		}
		public QuizzesContext quizzes() {
			return getRuleContext(QuizzesContext.class,0);
		}
		public ItemsContext items() {
			return getRuleContext(ItemsContext.class,0);
		}
		public NpcsContext npcs() {
			return getRuleContext(NpcsContext.class,0);
		}
		public PlayerContext player() {
			return getRuleContext(PlayerContext.class,0);
		}
		public Triggers_blockContext triggers_block() {
			return getRuleContext(Triggers_blockContext.class,0);
		}
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public EventsContext events() {
			return getRuleContext(EventsContext.class,0);
		}
		public Escape_roomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escape_room; }
	}

	public final Escape_roomContext escape_room() throws RecognitionException {
		Escape_roomContext _localctx = new Escape_roomContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_escape_room);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			match(T__0);
			setState(210);
			metadata();
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(211);
				variables_block();
				}
			}

			setState(215);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__22) {
				{
				setState(214);
				rooms();
				}
			}

			setState(218);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__57) {
				{
				setState(217);
				quizzes();
				}
			}

			setState(221);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__28) {
				{
				setState(220);
				items();
				}
			}

			setState(224);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__29) {
				{
				setState(223);
				npcs();
				}
			}

			setState(227);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__50) {
				{
				setState(226);
				player();
				}
			}

			setState(230);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(229);
				triggers_block();
				}
			}

			setState(233);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__64) {
				{
				setState(232);
				logic();
				}
			}

			setState(236);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__69) {
				{
				setState(235);
				events();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variables_blockContext extends ParserRuleContext {
		public List<Variable_defContext> variable_def() {
			return getRuleContexts(Variable_defContext.class);
		}
		public Variable_defContext variable_def(int i) {
			return getRuleContext(Variable_defContext.class,i);
		}
		public Variables_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables_block; }
	}

	public final Variables_blockContext variables_block() throws RecognitionException {
		Variables_blockContext _localctx = new Variables_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variables_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(238);
			match(T__1);
			setState(242);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(239);
				variable_def();
				}
				}
				setState(244);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_defContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EscapeRoomDSLParser.ID, 0); }
		public TerminalNode COLON() { return getToken(EscapeRoomDSLParser.COLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Variable_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_def; }
	}

	public final Variable_defContext variable_def() throws RecognitionException {
		Variable_defContext _localctx = new Variable_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(245);
			match(ID);
			setState(246);
			match(COLON);
			setState(247);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
